syntax = "proto3";

package simple_service;

service SimpleService {
  rpc UnaryMethod(SimpleRequest) returns (SimpleResponse);
  rpc ServerStreamMethod(SimpleRequest) returns (stream SimpleResponse);
}

message SimpleRequest {
  int32 f_int32 = 1;
}

message SimpleResponse {
  message Data {
    string test = 1;
  }

  Data data = 1;
}
