syntax = "proto3";

package simple_service;

service SimpleService {
  rpc UnaryMethod(SimpleMessage) returns (SimpleMessage);
}

message SimpleMessage {
  int32 f_int32 = 1;
}
